<resources>
    <string name="app_name">RENEW</string>
    <string name="language">English</string>
    <string name="network_error">No Internet!</string>
    <string name="network_error_desc">Please check your internet connection and try again</string>
    <string name="need_permission">Need Permission!</string>
    <string name="need_permission_desc">The app needs permission to use this feature</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="warning">Warning!</string>
    <string name="info">Info!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="somethings_not_right">Something\'s not right. Please try again.</string>
    <string name="loading">Loading. Please wait</string>
    <string name="incorrect_cluster_code">Incorrect cluster code</string>
    <string name="search">Search</string>
    <string name="form_locked_title">Form Locked!</string>
    <string name="record_saved">Record saved successfully</string>
    <string name="specify">Please (Specify)</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="confirm">Confirm</string>
    <string name="optional">Optional</string>
    <string name="reason">Reason</string>
    <string name="previous">Previous</string>
    <string name="proceed">Proceed</string>
    <string name="continued">Continue</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="lang_sindhi">Sindhi</string>
    <string name="lang_urdu">Urdu</string>
    <string name="lang_english">English</string>
    <string name="userId">User ID</string>
    <string name="enter_your_userid">Enter your user id</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="field_empty_error">Please fill all the fields</string>
    <string name="scan">Scan</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="camera_scan_permission_not_enabled">Please enable the camera permission to scan the code</string>
    <string name="scan_successful">Scan Successful</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="scan_not_successful">Scan not successful</string>
    <string name="scan_timeout">Scan timeout</string>
    <string name="today">Today</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="invalid_time_error">Invalid Date!</string>
    <string name="invalid_time_error_desc">Please select the valid date</string>
    <string name="invalid_time_max_error_desc">Maximum observation time would be %d days</string>
    <string name="time_not_selected_error_desc">Valid date or time must be selected</string>
    <string name="dir_not_created">Directory not created</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=%d characters</string>
    <string name="login_failed">Login failed!</string>
    <string name="data_sync_activity">Data Sync Activity</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="download_data">Download Data</string>
    <string name="download_data_desc">Please download the data before login</string>
    <string name="username_required">Username is required</string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="attempt_no">Attempt %d - %s</string>
    <string name="account_locked">Account Locked!</string>
    <string name="login_attempts_exceeded">Number of login attempts exceeded</string>
    <string name="upload_data">Upload Data</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="sync_upload_duplicate">Duplicate photo</string>
    <string name="sync_upload_success">Total: %d | Synced: %d | Duplicates: %d \n\nMessage: %s</string>
    <string name="successful">Successful</string>
    <string name="process_failed">Process Failed</string>
    <string name="sync_error">Error: %s</string>
    <string name="sync_download_success">Received: %d</string>
    <string name="sync_download_success_seq">%s</string>
    <string name="app_up_to_date">Latest Version Installed</string>
    <string name="no_new_records_to_upload">No new records to upload</string>
    <string name="status">Status: %s</string>
    <string name="change_pass">Change Password</string>
    <string name="db_browser">DB Browser</string>
    <string name="options" translatable="false">Options</string>
    <string name="sync_data" translatable="false">Sync Data</string>
    <string name="pending_forms">Pending forms</string>
    <string name="forms_report_by_date">Forms report by date</string>
    <string name="forms_report_by_cluster">Forms report by cluster</string>
    <string name="send_db">Send DB</string>
    <string name="import_db" translatable="false">Import DB</string>
    <string name="log_out">Logout</string>
    <string name="age">Age</string>
    <string name="backup_db">Backup DB</string>
    <string name="backup_successful">Backup Successful</string>
    <string name="backup_successful_desc">Database has been backed up successfully. To access the file please follow the instructions\n\n
        \u2022 Open \'File Explorer\'\n
        \u2022 Goto Android > data > %s > files > backup\n
        \u2022 Backup file name would be \'%s\'</string>
    <string name="backup_unsuccessful">Backup Unsuccessful: %s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="check">Check</string>
    <string name="edit_details">Edit details</string>
    <string name="list_of_mwras">List Of MWRAs</string>
    <string name="list_of_preg_woman">List Of Pregnant Woman</string>
    <string name="list_of_children_for_validation">List of Children for Validation</string>
    <string name="list_of_children_for_followUp">List of Children for Follow-up</string>
    <string name="list_of_mwra_child">List of Children for MWRA</string>
    <string name="list_of_adols">List of Adolescents</string>
    <string name="town">Town</string>
    <string name="uc">UC</string>
    <string name="tehsil">Tehsil</string>
    <string name="district">District</string>
    <string name="identification">Identification</string>
    <string name="no_image_found" translatable="false">Please Take %s Image</string>
    <string name="synced_recs">Synced Records</string>
    <string name="view_synced_recs_desc">Download synced records</string>
    <string name="synced_recs_filter">Synced Records Filter</string>
    <string name="select_module">Select Module</string>
    <string name="site">Site</string>
    <string name="start_date">From Date</string>
    <string name="end_date">To Date</string>
    <string name="select_synced_filter_desc">Please select filter to download the synced records</string>
    <string name="module_not_defined">Module not defined</string>
    <string name="clear">Clear</string>
    <string name="already_selected">This value has already been selected.</string>
    <string name="no_network_synced_recs_filter">No network! You can ony view records of the last inserted filter</string>
    <string name="select_site">Select Site</string>
    <string name="select_site_desc">Please select site to proceed</string>
    <string name="cluster">Cluster</string>
    <string name="insert_cluster_desc">Please insert cluster to proceed</string>
    <string name="form_locked">This form1 has been locked.</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="skip_to_end">Skip to End</string>
    <string name="back_pressed_not_allowed">Back Press Not Allowed</string>
    <string name="double_back_press">Please click BACK again</string>
    <string name="double_cancel_press" translatable="false">Please click CANCEL again</string>
    <string name="password_not_matched">Password did not match</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="screen_locked_desc">App screen has been locked after 15 minutes of idle time. \nPlease enter your password to unlock the screen</string>
    <string name="close_app">Close App</string>
    <string name="unlock_screen">Unlock Screen</string>
    <string name="main_screen">MAIN SCREEN</string>
    <string name="module_screen">Module Screen</string>
    <string name="start_interview">START INTERVIEW</string>
    <string name="open_form">Open form1 to start Interview</string>
    <string name="admin_options">ADMIN OPTIONS</string>
    <string name="change_pass_desc">Your new password must be different from previous password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_user">Welcome, %s!</string>
    <string name="username_pass_same">Username and Password cannot be same</string>
    <string name="incorrect_old_password">Incorrect old password</string>
    <string name="current_previous_password_cannot_same">Password cannot not be same as previous.</string>
    <string name="password_creation_criteria">Password must have alphabets, numbers and symbol</string>
    <string name="secured_pass_not_generated">Secured password not generated</string>
    <string name="password_reset_successful">Password has been reset successfully</string>
    <string name="function_not_defined">Function not defined</string>
    <string name="rooted_device_title">Rooted Device!</string>
    <string name="rooted_device_desc">Your device is rooted. This app will not work on rooted device</string>
    <string name="tamper_title">Device Tampering!</string>
    <string name="tamper_desc">Your device is Tampered. This app will not work on Tampered device</string>
    <string name="no_photos_taken">No photos were taken</string>
    <string name="no_photos_to_upload">No photos to upload</string>
    <string name="sync_upload_photo_success">Photo uploaded successfully</string>
    <string name="image_not_taken">Image not taken</string>
    <string name="no_records_found">No records found</string>
    <string name="download_new_version">Download New Version</string>
    <string name="please_select">Please Select</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="digits_all" translatable="false">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. -</string>
    <string name="digits_password" translatable="false">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789@$!%*?.-_&amp;</string>
    <string name="Q_istatus">istatus</string>
    <string name="istatus"> Result of Questionnaire interview </string>
    <string name="istatusi"> Discuss any result not completed with team leader </string>
    <string name="istatus01"> Complete </string>
    <string name="istatus02"> Incomplete </string>
    <string name="istatus03"> Other </string>
</resources>