<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_alert"
        android:layoutDirection="ltr"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_bottomsheet"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <Button
                android:id="@+id/titleTV"
                style="@style/Theme.AppStructure.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_rounded_app_dark_filled"
                android:backgroundTint="@color/primary_color_dark"
                android:drawableEnd="@drawable/ic_close"
                android:text="@string/synced_recs_filter"
                android:textSize="@dimen/_11ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/messageTV"
                    style="@style/Theme.AppStructure.RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:background="@color/red_color"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_3sdp"
                    android:text="@string/no_network_synced_recs_filter"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/descTV"
                    style="@style/Theme.AppStructure.RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/messageTV"
                    android:layout_alignParentStart="true"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_toStartOf="@+id/clearTV"
                    android:background="@android:color/transparent"
                    android:text="@string/select_synced_filter_desc"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/clearTV"
                    style="@style/Theme.AppStructure.RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/descTV"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:text="@string/clear"
                    android:textColor="@color/red_color"
                    tools:text="Clear" />

            </RelativeLayout>

            <TextView
                android:id="@+id/moduleTV"
                style="@style/Theme.AppStructure.RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded_app_bordered"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/select_module"
                android:padding="@dimen/_8sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down"
                app:layout_columnWeight="1" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:columnCount="2"
                app:orientation="horizontal"
                app:useDefaultMargins="true">

                <EditText
                    android:id="@+id/siteFilterTV"
                    style="@style/Theme.AppStructure.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_app_bordered"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="@string/cluster"
                    android:maxLines="1"
                    android:padding="@dimen/_8sdp"
                    app:layout_columnWeight="1"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                    android:id="@+id/startDatePicker"
                    style="@style/Theme.AppStructure.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_app_bordered"
                    android:gravity="center"
                    android:hint="@string/start_date"
                    android:padding="@dimen/_8sdp"
                    app:dateFormat="@string/date_format"
                    app:layout_columnWeight="1"
                    app:maxDate="CR_DATE"
                    app:minDate="CR_DATE" />

                <AutoCompleteTextView
                    android:id="@+id/usernameAC"
                    style="@style/Theme.AppStructure.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_app_bordered"
                    android:completionThreshold="2"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:padding="@dimen/_8sdp"
                    app:layout_columnWeight="1" />

                <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                    android:id="@+id/endDatePicker"
                    style="@style/Theme.AppStructure.EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_app_bordered"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="@string/end_date"
                    android:padding="@dimen/_8sdp"
                    app:dateFormat="@string/date_format"
                    app:layout_columnWeight="1"
                    app:maxDate="CR_DATE"
                    app:minDate="CR_DATE" />

            </androidx.gridlayout.widget.GridLayout>

            <Button
                android:id="@+id/posBtn"
                style="@style/Theme.AppStructure.ButtonStyle"
                android:layout_marginStart="@dimen/_75sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_75sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/proceed"
                app:backgroundTint="@color/secondary_color_dark" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>